--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         </div>
 
         <h1>Coopex Entregas</h1>
-        <p class="subtitle">Acesso rápido aos sistemas</p>
+        <div class="subtitle">Acesso rápido aos sistemas</div>
 
-        <div class="secure">
+        <div class="secure" role="note" aria-label="Acesso Seguro">
           <div class="shield" aria-hidden="true">
             <svg viewBox="0 0 24 24" fill="none">
-              <path d="M12 3l7 4v6c0 5-3 9-7 11C8 22 5 18 5 13V7l7-4z" stroke="currentColor" stroke-width="2" />
-              <path d="M9 12l2 2 4-5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M12 3 20 7v6c0 5-3.5 8.5-8 9-4.5-.5-8-4-8-9V7l8-4Z" stroke="white" stroke-width="1.8" stroke-linejoin="round"/>
+              <path d="M9.5 12.2 11.3 14l3.6-3.8" stroke="white" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
           </div>
           <div>
@@ -42,13 +42,15 @@
           </div>
         </div>
 
-        <nav class="btns" aria-label="Links rápidos">
-          <!-- Troque os href pelos seus links reais -->
-          <a class="btn" href="#" target="_blank" rel="noopener">
+        <div class="btns">
+
+          <a class="btn" href="https://financas-dxsu.onrender.com/" target="_blank" rel="noopener">
             <div class="left">
               <div class="ico" aria-hidden="true">
                 <svg viewBox="0 0 24 24" fill="none">
-                  <path d="M4 10.5L12 4l8 6.5V20a1 1 0 0 1-1 1h-5v-6H10v6H5a1 1 0 0 1-1-1v-9.5z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
+                  <path d="M4 10.5V20a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-9.5" stroke="white" stroke-width="1.8" stroke-linecap="round"/>
+                  <path d="M3 10.5 6 4h12l3 6.5" stroke="white" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M8 21v-6a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v6" stroke="white" stroke-width="1.8" stroke-linecap="round"/>
                 </svg>
               </div>
               <div class="meta">
@@ -56,15 +58,17 @@
                 <div class="desc">Painel financeiro</div>
               </div>
             </div>
-            <span class="pill">Abrir</span>
+            <div class="pill">Abrir</div>
           </a>
 
-          <a class="btn" href="#" target="_blank" rel="noopener">
+          <a class="btn" href="https://escalas-2-1.onrender.com/login" target="_blank" rel="noopener">
             <div class="left">
               <div class="ico" aria-hidden="true">
                 <svg viewBox="0 0 24 24" fill="none">
-                  <path d="M12 2a7 7 0 0 1 7 7v3h2v8a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-8h2V9a7 7 0 0 1 7-7z" stroke="currentColor" stroke-width="2"/>
-                  <path d="M8 12v-3a4 4 0 0 1 8 0v3" stroke="currentColor" stroke-width="2"/>
+                  <path d="M4 12a8 8 0 0 1 16 0" stroke="white" stroke-width="1.8" stroke-linecap="round"/>
+                  <path d="M4 12v5a2 2 0 0 0 2 2h2v-7H6a2 2 0 0 0-2 2Z" stroke="white" stroke-width="1.8" stroke-linejoin="round"/>
+                  <path d="M20 12v5a2 2 0 0 1-2 2h-2v-7h2a2 2 0 0 1 2 2Z" stroke="white" stroke-width="1.8" stroke-linejoin="round"/>
+                  <path d="M12 19h2" stroke="white" stroke-width="1.8" stroke-linecap="round"/>
                 </svg>
               </div>
               <div class="meta">
@@ -72,14 +76,16 @@
                 <div class="desc">Escalas e operação</div>
               </div>
             </div>
-            <span class="pill">Entrar</span>
+            <div class="pill">Abrir</div>
           </a>
 
-          <a class="btn" href="#" target="_blank" rel="noopener">
+          <a class="btn" href="https://kratossystem.onrender.com/login" target="_blank" rel="noopener">
             <div class="left">
               <div class="ico" aria-hidden="true">
                 <svg viewBox="0 0 24 24" fill="none">
-                  <path d="M12 21s-7-4.5-7-10a4 4 0 0 1 7-2 4 4 0 0 1 7 2c0 5.5-7 10-7 10z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
+                  <path d="M7.5 13.5 5 11a2.2 2.2 0 0 1 0-3.1l1-1a2.2 2.2 0 0 1 3.1 0l1.2 1.2" stroke="white" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M16.5 13.5 19 11a2.2 2.2 0 0 0 0-3.1l-1-1a2.2 2.2 0 0 0-3.1 0l-1.2 1.2" stroke="white" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M9.2 10.2 12 13l2.8-2.8a2 2 0 0 1 2.8 0l.4.4a2 2 0 0 1 0 2.8l-3.7 3.7a3 3 0 0 1-4.2 0L6.4 13.4a2 2 0 0 1 0-2.8l.4-.4a2 2 0 0 1 2.8 0Z" stroke="white" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
               </div>
               <div class="meta">
@@ -87,30 +93,69 @@
                 <div class="desc">Área do parceiro</div>
               </div>
             </div>
-            <span class="pill">Entrar</span>
-          </a>
-        </nav>
-
-        <div class="miniActions" aria-label="Contato e redes">
-          <a class="miniIcon" href="https://wa.me/5584981110709" target="_blank" rel="noopener" aria-label="WhatsApp">
-            <svg viewBox="0 0 24 24">
-              <path d="M20 11.5a7.5 7.5 0 0 1-11.9 6l-4.1 1.1 1.2-4a7.5 7.5 0 1 1 14.8-3.1z" fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
-              <path d="M9 9.5c.2 2 3 4.8 5 5l1.1-1.1c.2-.2.6-.3.9-.2l1.4.5c.4.1.6.5.5.9-.3 1.2-1.4 2-2.6 2-3.7 0-7.3-3.6-7.3-7.3 0-1.2.8-2.3 2-2.6.4-.1.8.1.9.5l.5 1.4c.1.3 0 .7-.2.9L9 9.5z" fill="currentColor"/>
-            </svg>
+            <div class="pill">Abrir</div>
           </a>
 
-          <a class="miniIcon" href="https://www.instagram.com/coopex.entregas?igsh=bDFpNWdobjMyZzlj" target="_blank" rel="noopener" aria-label="Instagram">
-            <svg viewBox="0 0 24 24">
-              <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5z" fill="none" stroke="currentColor" stroke-width="2"/>
-              <path d="M12 16a4 4 0 1 0 0-8 4 4 0 0 0 0 8z" fill="none" stroke="currentColor" stroke-width="2"/>
-              <path d="M17.5 6.5h.01" stroke="currentColor" stroke-width="3" stroke-linecap="round"/>
-            </svg>
-          </a>
+         <div class="miniActions">
+  <!-- WhatsApp (não mostra número; abre conversa) -->
+  <a class="miniIcon"
+     href="https://wa.me/5584981110706"
+     target="_blank"
+     rel="noopener"
+     aria-label="Abrir WhatsApp da Coopex"
+     title="WhatsApp">
+    <!-- Ícone WhatsApp -->
+    <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+      <path d="M12 2a9.7 9.7 0 0 0-8.29 14.73L3 22l5.42-1.63A9.7 9.7 0 1 0 12 2Zm0 17.64a7.9 7.9 0 0 1-4.02-1.1l-.29-.17-3.22.97.99-3.13-.19-.32A7.9 7.9 0 1 1 12 19.64Zm4.56-5.83c-.25-.13-1.5-.74-1.73-.82-.23-.08-.4-.13-.57.13-.17.25-.65.82-.8.99-.15.17-.29.19-.54.06-.25-.13-1.05-.39-2-1.25-.74-.66-1.24-1.47-1.38-1.72-.15-.25-.02-.38.11-.51.11-.11.25-.29.38-.44.13-.15.17-.25.25-.42.08-.17.04-.32-.02-.44-.06-.13-.57-1.37-.78-1.88-.2-.48-.41-.42-.57-.42h-.49c-.17 0-.44.06-.67.32-.23.25-.88.86-.88 2.1s.9 2.44 1.02 2.61c.13.17 1.77 2.7 4.29 3.79.6.26 1.07.42 1.43.54.6.19 1.15.16 1.58.1.48-.07 1.5-.61 1.71-1.2.21-.59.21-1.1.15-1.2-.06-.1-.23-.16-.48-.29Z"/>
+    </svg>
+  </a>
+
+  <!-- Instagram (abre perfil) -->
+  <a class="miniIcon"
+     href="https://www.instagram.com/coopex.entregas?igsh=bDFpNWdobjMyZzlj"
+     target="_blank"
+     rel="noopener"
+     aria-label="Abrir Instagram da Coopex"
+     title="Instagram">
+    <!-- Ícone Instagram -->
+    <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+      <path d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9A5.5 5.5 0 0 1 16.5 22h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2Zm0 2A3.5 3.5 0 0 0 4 7.5v9A3.5 3.5 0 0 0 7.5 20h9A3.5 3.5 0 0 0 20 16.5v-9A3.5 3.5 0 0 0 16.5 4h-9Zm4.5 4.2A3.8 3.8 0 1 1 8.2 12 3.8 3.8 0 0 1 12 8.2Zm0 2A1.8 1.8 0 1 0 13.8 12 1.8 1.8 0 0 0 12 10.2ZM17.6 6.7a.9.9 0 1 1-.9-.9.9.9 0 0 1 .9.9Z"/>
+    </svg>
+  </a>
+</div>
+
+          <div class="foot">© <span id="y"></span> Coopex • Entregas</div>
         </div>
 
-        <footer class="foot">© 2026 Coopex • Entregas</footer>
       </div>
     </section>
   </main>
+
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+
+    document.getElementById("copy").addEventListener("click", async () => {
+      try {
+        await navigator.clipboard.writeText(location.href);
+        alert("Link copiado!");
+      } catch (e) {
+        alert("Copie manualmente: " + location.href);
+      }
+    });
+
+    document.getElementById("share").addEventListener("click", async () => {
+      try {
+        if (navigator.share) {
+          await navigator.share({
+            title: document.title,
+            text: "Coopex Entregas - Acessos rápidos",
+            url: location.href
+          });
+        } else {
+          alert("Compartilhamento não disponível. Copie o link: " + location.href);
+        }
+      } catch (e) {}
+    });
+  </script>
 </body>
 </html>
