--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               </div>
               <div class="meta">
                 <div class="name">Supervisão</div>
-                <div class="desc">Escalas e operação</div>
+                <div class="desc">Cooperados na base</div>
               </div>
             </div>
             <div class="pill">Abrir</div>
@@ -90,7 +90,7 @@
               </div>
               <div class="meta">
                 <div class="name">Parcerias</div>
-                <div class="desc">Área do parceiro</div>
+                <div class="desc">parcerias com a coopex</div>
               </div>
             </div>
             <div class="pill">Abrir</div>
